java-8: adapt to JDK 8 (List.copyOf->unmodifiableList, test var->explicit, scripts --release 8)